2012-07-03 Massimo Manghi <mxmanghi@apache.org>
    * CHANGES,TODO: emptied by obsolete content

2012-06-06 Massimo Manghi <mxmanghi@apache.org>
    * INSTALL: wrong link to website fixed. Formatting improved by replacing tabs with spaces.

2012-06-05 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/commands.xml: manual entry for 'load_response' now explains what the __var variables are for

2012-06-04 Massimo Manghi <mxmanghi@apache.org>
    * tests/shorthand.test,tests/shorthand.rvt: test failed because the same output line
    appeared twice in shorthand.rvt, add Id keyword to shorthand.test

2012-06-01 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/form/form.tcl: automatic field ids generation. Removed dependency on tcllib package 'uuid'

2012-05-20 Massimo Manghi <mxmanghi@apache.org>
    * rivet/rivet-tcl/{parray_table.tcl,http_accept.tcl}: new commands for printing arrays in HTML tables and
    parsing of Accept HTTP header lines
    * rivet/packages/entities/entities.tcl: backport from trunk of package RivetEntities
    * doc/xml/entities.xml: page manual for package RivetEntities
    * doc/xml/commands.xml: new manual page for http_accept
    * src/apache-2/mod_rivet.c: if RIVET_DISPLAY_VERSION is defined then the symbol RIVET_SERVER is
    stored in the 'server' array
    * configure.ac,VERSION: Rivet version is now 2.0.5
    * tclconfig/ltmain.sh: updated from recent autotools installation

2012-05-17 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/dio/dio.tcl: fixed SQL syntax that would break compatibility with Oracle (Fixes reopened
    bug #53222)

2012-05-13 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/tclrivet/tclrivetparser.tcl: Tcl parser implements new shorthand echo syntax (closes
    bug #53217)
    * rivet/packages/tclrivet/parse.tcl: auto_path handling improved as suggested in bug #52898
    * doc/xml/commands.xml: improved manual entry for 'var list' (Fixes bug #52911)
 